--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "ethers": "^6.13.4",
+    "ganache": "^7.9.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "web3": "^4.15.0"
   },
   "devDependencies": {
     "@types/node": "^20",
