--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -10,12 +10,15 @@
     "ganache": "ganache --wallet.seed myCustomSeed"
   },
   "dependencies": {
-    "ethers": "^6.13.4",
+    "ethers": "^5.7.2",
     "ganache": "^7.9.2",
+    "ganache-cli": "^6.12.2",
+    "hardhat": "^2.22.16",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "web3": "^4.15.0"
+    "web3": "^4.14.0",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@types/node": "^20",
