--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -15,6 +15,7 @@
     "ganache-cli": "^6.12.2",
     "hardhat": "^2.22.16",
     "next": "15.0.3",
+    "nextui-cli": "^0.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "web3": "^4.14.0",
