--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -14,6 +14,7 @@
     "ganache": "^7.9.2",
     "ganache-cli": "^6.12.2",
     "hardhat": "^2.22.16",
+    "lucide-react": "^0.465.0",
     "next": "15.0.3",
     "nextui-cli": "^0.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
