--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -23,6 +23,7 @@
     "nextui-cli": "^0.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "recharts": "^2.14.1",
     "web3": "^4.14.0",
     "web3modal": "^1.9.12"
   },
