--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -12,17 +12,22 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^5.16.9",
     "@mui/material": "^5.16.9",
     "ethers": "^6.13.4",
     "ganache": "^6.4.5",
     "ganache-cli": "^6.12.2",
     "hardhat": "^0.0.7",
+    "headlessui": "^0.0.0",
     "lucide-react": "^0.465.0",
     "next": "15.0.3",
+    "next-themes": "^0.4.3",
     "nextui-cli": "^0.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.4.0",
     "recharts": "^2.14.1",
     "web3": "^4.14.0",
     "web3modal": "^1.9.12"
