--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -23,6 +23,7 @@
     "headlessui": "^0.0.0",
     "lucide-react": "^0.465.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.3",
     "nextui-cli": "^0.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
