--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -21,6 +21,7 @@
     "ganache-cli": "^6.12.2",
     "hardhat": "^0.0.7",
     "headlessui": "^0.0.0",
+    "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.465.0",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
