--- a/chaincare/package.json
+++ b/chaincare/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.3",
     "nextui-cli": "^0.4.0",
+    "node-fetch": "^3.3.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.4.0",
