--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ chaincare/next-env.d.ts
 #Intellig
 ../.idea
 .idea
-chaincare/src/components/contracts.ts
+/chaincare/src/components/contracts.ts
+/chaincare/contracts/lock.sol
